    - Resolved missing cross-language dependencies for
      SWIG bindings (fixes #2264).

  From Dirk Baechle:
    - Removed a lot of compatibility methods and workarounds
      for Python versions < 2.7, in order to prepare the work
      towards a combined 2.7/3.x version. (PR #284)
      Also fixed the default arguments for the print_tree and
      render_tree methods. (PR #284, too)


RELEASE 2.4.1 - Mon, 07 Nov 2015 10:37:21 -0700

  From Arfrever Frehtes Taifersar Arahesis:
    - Fix for Bug # 2791 - Setup.py fails unnecessarily under Jython.

  From Dirk Baechle:
    - Fixed license of SVG titlepage files in the context of Debian
      packaging, such that they allow for commercial use too (#2985).

  From William Blevins:
    - InstallVersionedLib now available in the DefaultEnvironment context.
    - Improves orthogonality of use cases between different Install functions.

  From Carnë Draug:
    - Added new configure check, CheckProg, to check for
      existence of a program.

  From Andrew Featherstone:
    - Fix for issue #2840 - Fix for two environments specifying same target with different
      actions not throwing hard error. Instead SCons was incorrectly issuing a warning
      and continuing.

  From Hiroaki Itoh :
    - Add support `Microsoft Visual C++ Compiler for Python 2.7' 
      Compiler can be obtained at: https://www.microsoft.com/en-us/download/details.aspx?id=44266

  From Florian Miedniak:
    - Fixed tigris issue #3011: Glob() excludes didn't work when used with VariantDir(duplicate=0)

  From William Roberts:
    - Fix bug 2831 and allow Help() text to be appended to AddOption() help.

  From Paweł Tomulik:
    - Reimplemented versioning for shared libraries, with the following effects
    - Fixed tigris issues #3001, #3006.
    - Fixed several other issues not reported to tigris, including:
      issues with versioned libraries in subdirectories with tricky names,
      issues with versioned libraries and variant directories,