@@ -19,6 +19,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       Also fixed the default arguments for the print_tree and
       render_tree methods. (PR #284, too)
 
+  From Adarsh Sanjeev:
+  	- Fix for issue #2494: Added string support for Chmod function.
 
 RELEASE 2.4.1 - Mon, 07 Nov 2015 10:37:21 -0700
 
